--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <p class="paragraphe"></p>
     <p class="paragraphe"></p>
     <p class="paragraphe"></p>
+    <p class="paragraphe"></p>
+    <p class="paragraphe"></p>
+    <p class="paragraphe"></p>
+    <p class="paragraphe"></p>
+    <p class="paragraphe"></p>
 
 
     <script src="app.js"></script>
